<resources>
    <string name="app_name">Login</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingress">Ingresar</string>
    <string name="signup">Registrarse</string>
    <string name="register">Registrar</string>
    <string name="email_o_usuario">Usuario</string>
    <string name="invalidCredentials">Usuario o contraseña incorrectos</string>
    <string name="email">Email: </string>
    <string name="full_name">Nombre: </string>
    <string name="id">Número de ID: </string>
    <string name="session_options">Opciones de sesión</string>
    <string name="logout">Cerrar sesión</string>
    <string name="accept">Aceptar</string>
    <string name="successful_register">Ahora estás registrado</string>
    <string name="unsuccessful">Algo salió mal, intenta de nuevo más tarde</string>
    <string name="error">Ups! Ocurrió un error</string>
    <string name="ocurrio_error">Algo salió mal con la recuperación de datos</string>
    <string name="no_more_data">No se encontraron más datos</string>
    <string name="search">Search</string>
    <string name="cerrar">Cerrar</string>
    <string name="pick_user">Elige un usuario</string>
    <string name="hello">Hola</string>
</resources>